started on the css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>RPS Game</title>
   <!-- Link CSS here -->
-
+<link rel="stylesheet" href="css/style.css">
   <!-- Link JQuery here -->
 
   <!-- Link Javascript File here -->
@@ -26,7 +26,11 @@
     <h1> Rock Paper Scissors!</h1>
     <p> Type in the input box "rock", "paper", or "scissors press shoot and the computer wil verse you</p>
     <img src="https://www.dramafever.com/st/news/images/cheater1.jpg">
-    <input>
+   <div class="row">
+    <input class="Yes">
+    <button type="button">Shoot!</button>
+    </input>
+   </div>
     <div>User Choice</div>
     <div>Computer Choice</div>
     <div>Winner</div>
