--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <title>RPS Game</title>
   <!-- Link CSS here -->
-<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Link JQuery here -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Link Javascript File here -->
-
+  <script src="js/script.js"></script>
   <!-- Latest compiled and minified Bootstrap CSS -->
 
 </head>
