--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img src="https://www.dramafever.com/st/news/images/cheater1.jpg">
    <div class="row">
     <input class="Yes">
-    <button type="button">Shoot!</button>
+    <button id="Shoot" type="button">Shoot!</button>
     </input>
    </div>
     <div>User Choice</div>
