--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
     <button id="Shoot" type="button">Shoot!</button>
     </input>
    </div>
-    <div>User Choice</div>
-    <div>Computer Choice</div>
-    <div>Winner</div>
+    <div> 
+    <p> User choice </p>
+      <p id="UC"> </p>
+      </div>
+    <div>
+      <p> Computer Choice </p>
+       <p id="CMP"> </p>
+    </div>
+    <div>
+      <p> Winner </p> 
+        <p id="W"> </p>
+    </div>
 
 
 
