--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>RPS Game</title>
-  <!-- Link CSS here -->
-  <link rel="stylesheet" href="css/style.css">
-  <!-- Link JQuery here -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Link Javascript File here -->
-  <script src="js/script.js"></script>
-  <!-- Latest compiled and minified Bootstrap CSS -->
-
+ <head>
+    <title>RPS Game</title>
+    <!-- Link CSS here -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Link JQuery here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Link Javascript File here -->
+    <script src="js/script.js"></script>
+    <!-- Latest compiled and minified Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--- Fontawesome CSS--->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
 </head>
+
 
 <body>
   <!-- TASK 1: In the div below. 
@@ -29,7 +35,6 @@
    <div class="row">
     <input class="Yes">
     <button id="Shoot" type="button">Shoot!</button>
-    </input>
    </div>
     <div> 
     <p> User choice </p>
@@ -49,5 +54,7 @@
   </div>
 
 </body>
+
+</html>
 
 </html>
